; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_chunk.c_list_return_srf.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_chunk.c_list_return_srf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i64, i64 }

@TYPEFUNC_SCALAR = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_FEATURE_NOT_SUPPORTED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [75 x i8] c"function returning record called in context that cannot accept type record\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @list_return_srf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @list_return_srf(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %9 = call i64 (...) @SRF_IS_FIRSTCALL()
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %23

11:                                               ; preds = %1
  %12 = load i32, i32* %3, align 4
  %13 = call i64 @get_call_result_type(i32 %12, i32* null, i32* %6)
  %14 = load i64, i64* @TYPEFUNC_SCALAR, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %22

16:                                               ; preds = %11
  %17 = load i32, i32* @ERROR, align 4
  %18 = load i32, i32* @ERRCODE_FEATURE_NOT_SUPPORTED, align 4
  %19 = call i32 @errcode(i32 %18)
  %20 = call i32 @errmsg(i8* getelementptr inbounds ([75 x i8], [75 x i8]* @.str, i64 0, i64 0))
  %21 = call i32 @ereport(i32 %17, i32 %20)
  br label %22

22:                                               ; preds = %16, %11
  br label %23

23:                                               ; preds = %22, %1
  %24 = call %struct.TYPE_5__* (...) @SRF_PERCALL_SETUP()
  store %struct.TYPE_5__* %24, %struct.TYPE_5__** %4, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  store i64 %27, i64* %5, align 8
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 2
  %30 = load i64, i64* %29, align 8
  %31 = inttoptr i64 %30 to i32*
  store i32* %31, i32** %7, align 8
  %32 = load i64, i64* %5, align 8
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 1
  %35 = load i64, i64* %34, align 8
  %36 = icmp slt i64 %32, %35
  br i1 %36, label %37, label %48

37:                                               ; preds = %23
  %38 = load i32*, i32** %7, align 8
  %39 = call i32 @linitial(i32* %38)
  %40 = call i32 @CStringGetTextDatum(i32 %39)
  store i32 %40, i32* %8, align 4
  %41 = load i32*, i32** %7, align 8
  %42 = call i64 @list_delete_first(i32* %41)
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %44 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %43, i32 0, i32 2
  store i64 %42, i64* %44, align 8
  %45 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %46 = load i32, i32* %8, align 4
  %47 = call i32 @SRF_RETURN_NEXT(%struct.TYPE_5__* %45, i32 %46)
  br label %51

48:                                               ; preds = %23
  %49 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %50 = call i32 @SRF_RETURN_DONE(%struct.TYPE_5__* %49)
  br label %51

51:                                               ; preds = %48, %37
  %52 = load i32, i32* %2, align 4
  ret i32 %52
}

declare dso_local i64 @SRF_IS_FIRSTCALL(...) #1

declare dso_local i64 @get_call_result_type(i32, i32*, i32*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local %struct.TYPE_5__* @SRF_PERCALL_SETUP(...) #1

declare dso_local i32 @CStringGetTextDatum(i32) #1

declare dso_local i32 @linitial(i32*) #1

declare dso_local i64 @list_delete_first(i32*) #1

declare dso_local i32 @SRF_RETURN_NEXT(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @SRF_RETURN_DONE(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
